--- a/config/meta.yml
+++ b/config/meta.yml
@@ -1,4 +1,4 @@
 meta_name: "Drive Guru"
-meta_title: "Drive Guru - Your driving matchmaker"
-meta_description: "Best driving instructor"
-meta_image: "cover.png"
+meta_title: "Drive Guru - Drive confidently with the right instructor by your side"
+meta_description: "DriveGuru is an app that connects aspiring learner drivers with reliable driving instructors across Mauritius. Whether you are a student or a teacher, you are bound to find the perfect match on DriveGuru!"
+meta_image: "logo.png"
